--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -1,55 +1,61 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}{{ parent()}} Inscription {% endblock %}
+{% block title %}
+	{{ parent()}}
+	Inscription
+{% endblock %}
 
 {% block stylesheets %}
-{{ parent() }}
-<link rel="stylesheet" href="{{ asset('css/style-register.css') }}" crossorigin="" />
+	{{ parent() }}
+    <link rel="stylesheet" href="{{ asset('css/register.css') }}" crossorigin="" />
 {% endblock %}
 
 {% block container %}
-{% for flashError in app.flashes('verify_email_error') %}
-<div class="alert alert-danger" role="alert">{{ flashError }}</div>
-{% endfor %}
 
-<div class="form-container">
-<h1 class="text-center h1-register">Créer votre compte</h1>
-<a href="{{ path('app_login') }}" class="authentication d-block text-center">Se connecter</a>
-
-{{ form_start(registrationForm, { 'attr': {'autocomplete': 'off' } }) }}
-    <div class="form-group">
-    {{ form_row(registrationForm.username) }}
-    </div>
-    <div class="form-group">
-    {{ form_row(registrationForm.firstname) }}
-    </div>
-    <div class="form-group">
-    {{ form_row(registrationForm.name) }}
-    </div>
-    <div class="form-group">
-    {{ form_row(registrationForm.birthdate) }}
-    </div>
-    <div class="form-group">
-    {{ form_row(registrationForm.email) }}
-    </div>
-    <div class="form-group">
-    {{ form_row(registrationForm.password) }}
-    </div>
-    <div class="form-check">
-    {{ form_row(registrationForm.agreeTerms) }}
-    </div>
-    
-
-<button type="submit" class="btn form-submit">S'enregistrer</button>
-</div>
+	<div class="form-container">
+		{% for flashError in app.flashes('verify_email_error') %}
+			<div class="alert alert-danger" role="alert">{{ flashError }}</div>
+		{% endfor %}
 
 
-{{ form_end(registrationForm) }}
+		<h1 class="text-center h1-register">Créer votre compte</h1>
+		<a href="{{ path('app_login') }}" class="authentication d-block text-center">Se connecter</a>
+
+		{{ form_start(registrationForm, { 'attr': {'autocomplete': 'off' } }) }}
+		<div class="form-group">
+			{{ form_row(registrationForm.username) }}
+		</div>
+		<div class="form-group">
+			{{ form_row(registrationForm.firstname) }}
+		</div>
+		<div class="form-group">
+			{{ form_row(registrationForm.name) }}
+		</div>
+		<div class="form-group">
+			{{ form_row(registrationForm.birthdate) }}
+		</div>
+		<div class="form-group">
+			{{ form_row(registrationForm.email) }}
+		</div>
+		<div class="form-group">
+			{{ form_row(registrationForm.password) }}
+		</div>
+		<div class="form-check">
+			{{ form_row(registrationForm.agreeTerms) }}
+		</div>
+
+
+		<button type="submit" class="btn form-submit">S'enregistrer</button>
+        {{ form_end(registrationForm) }}
+	</div>
+
+
+	
 {% endblock %}
 
 {% block javascripts %}
 
-{{ parent() }}
+	{{ parent() }}
 
-<script src="{{ asset('js/register.js') }}"> </script>
+	<script src="{{ asset('js/register.js') }}"></script>
 {% endblock %}
