--- a/templates/advanced_search/index.html.twig
+++ b/templates/advanced_search/index.html.twig
@@ -6,7 +6,7 @@
 {# <link rel="stylesheet" href="{{ asset('css/style-advanced-search.css') }}" crossorigin="" />
 <link rel="stylesheet" href="{{ asset('css/style-nav-header.css') }}" crossorigin=""/> #}
 {{ parent() }}
-<link rel="stylesheet" href="{{ asset('css/home.css') }}" crossorigin="" />
+<link rel="stylesheet" href="{{ asset('css/advanced-search.css') }}" crossorigin="" />
 
 {% endblock %}
 
@@ -14,113 +14,87 @@
 
 
 
-<div id="form-advanced-search" class="">
+<div id="form-advanced-search" class="form-advanced-search">
     <h1 class="text-center">Recherche filtrée</h1>
-    <a href="{{ path('search') }}" class="search-redirection d-block text-center mb-0">Faire une recherche
-        simplifiée</a>
-    <p class="text-center">Sélectionnez vos critères préférés afin de trouver votre prochaine destination.</p>
+    <a href="{{ path('search') }}" class="search-redirection d-block text-center mb-0">Faire une recherche simplifiée</a>
+    <p class="text-center">Sélectionnez vos critères préférés afin de trouver votre prochaine destination. Vous n'êtes pas obligé(e) de remplir tous les critères</p>
     {{ form_start(form, {'attr': {'novalidate': 'novalidate'}}) }}
     {#  <fieldset class="form-group  bg-light border">{{ form_widget(formSearch)}}</fieldset> #}
     {# id : advanced_search_search #}
-    <fieldset class="form-group  bg-light border">{{ form_widget(form.search)}}</fieldset>
-    {{ form_widget(form.startDate)}}
+     
+        <fieldset class="form-group"> 
+            {{ form_label(form.search) }} 
+            {{ form_widget(form.search)}}
+            <div id="search-error" class="search-error-hidden">Ce pays n'existe pas !</div>
+        </fieldset>
 
-    {{ form_widget(form.endDate) }}
+        <fieldset class="form-group">
+            {{ form_label(form.startDate) }} 
+            {{ form_widget(form.startDate) }}
+        </fieldset>
+        
+        <fieldset class="form-group">
+            {{ form_label(form.endDate) }} 
+            {{ form_widget(form.endDate) }}
+        </fieldset>
 
-        <fieldset class="form-group  bg-light border">
+        <fieldset class="form-group">
+            {{ form_label(form.language) }} 
             {{ form_widget(form.language) }}
         </fieldset>
-        <fieldset class="form-group  bg-light border">
+
+        <fieldset class="form-group">
+            {{ form_label(form.temperature) }} 
             {{ form_widget(form.temperature)}}
         </fieldset>
 
-        <fieldset class="form-group  bg-light border">{{ form_widget(form.cost)}}
+        <fieldset class="form-group">
+            {{ form_label(form.cost) }} 
+            {{ form_widget(form.cost)}}
         </fieldset>
-        <fieldset class="form-group  bg-light border">{{ form_widget(form.area)}}
+
+        <fieldset class="form-group">
+            {{ form_label(form.area) }} 
+            {{ form_widget(form.area)}}
         </fieldset>
-        <div class="flex-row">
-            <div class="accordion mb-3" id="accordion-landscape">
-                <div class="card">
-                    <div class="card-header" id="headingOne">
-                        <h2 class="mb-0">
-                            <div id="landscape-label" class="text-left" data-toggle="collapse" data-target="#landscape"
-                                aria-expanded="true" aria-controls="collapseOne" placeholder="Je parle français">
-                                Paysage
-                                <div>
-                        </h2>
-                    </div>
 
-                    <div id="landscape" class="collapse" aria-labelledby="headingOne"
-                        data-parent="#accordion-landscape">
-                        <div class="card-body">
-                            <fieldset class="form-group  bg-light">
-                                {{ form_widget(form.landscape, {'attr': {'id': 'advanced-search-landscape'}})}}
-                            </fieldset>
-                        </div>
-                    </div>
-                </div>
+        <div class="form-checkboxes">
+            <div class="flex-row-title">
+                
+                {{ form_label(form.landscape)}}
+                {# {{ form_widget(form.landscape, {'attr': {'id': 'advanced-search-landscape'}})}} #}                          
+                {{ form_label(form.sportingActivities)}}
+                {# {{ form_widget(form.sportingActivities, {'attr': {'id': 'advanced-search-sporting-activities'}}) }} #}           
+                {{ form_label(form.placesToVisit) }}
+                {# {{ form_widget(form.placesToVisit) }} #}
+                        
+            </div>
+            <div class="flex-row">
+                {# {{ form_label(form.landscape)}} #}
+                {{ form_widget(form.landscape, {'attr': {'id': 'advanced-search-landscape'}})}}                  
+                {# {{ form_label(form.sportingActivities)}} #}
+                {{ form_widget(form.sportingActivities, {'attr': {'id': 'advanced-search-sporting-activities'}}) }}
+                {# {{ form_label(form.placesToVisit) }} #}
+                {{ form_widget(form.placesToVisit) }}
+                        
             </div>
 
-            <div class="accordion mb-3" id="accordion-activities">
-                <div class="card">
-                    <div class="card-header" id="headingOne">
-                        <h2 class="mb-0">
-                            <div id="activities-label" class="text-left" data-toggle="collapse"
-                                data-target="#activities" aria-expanded="true" aria-controls="collapseOne"
-                                placeholder="Je parle français">
-                                Activités
-                                <div>
-                        </h2>
-                    </div>
-
-                    <div id="activities" class="collapse" aria-labelledby="headingOne"
-                        data-parent="#accordion-activities">
-                        <div class="card-body">
-                            <fieldset class="form-group bg-light">
-                                {{ form_widget(form.sportingActivities, {'attr': {'id': 'advanced-search-sporting-activities'}}) }}
-                            </fieldset>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="accordion mb-5" id="accordion-places">
-                <div class="card">
-                    <div class="card-header" id="headingOne">
-                        <h2 class="mb-0">
-                            <div id="places-label" class="text-left" data-toggle="collapse" data-target="#places"
-                                aria-expanded="true" aria-controls="collapseOne" placeholder="Je parle français">
-                                Lieux à visiter
-                                <div>
-                        </h2>
-                    </div>
-
-                    <div id="places" class="collapse" aria-labelledby="headingOne" data-parent="#accordion-places">
-                        <div class="card-body">
-                            <fieldset class="form-group  bg-light">
-                                {{ form_widget(form.placesToVisit) }}
-                            </fieldset>
-                        </div>
-                    </div>
-                </div>
-            </div>
         </div>
-        <button class="btn form-reset">Réinitialiser</button>
-        <button class="btn form-submit">{{ button_label|default('Rechercher') }}</button>
+        <div class="buttons">
+            <button class="btn form-reset">Réinitialiser</button>
+            <button class="btn form-submit">{{ button_label|default('Rechercher') }}</button>
+        </div>
         {{ form_end(form) }}
 
-        <div id="search-error" class="search-error-hidden">Ce pays n'existe pas !</div>
         <div id="search-results"></div>
 
 </div>
 
 <template id="template__elt">
     <div class="card-country">
-    <a href="#" class="link-to-country stretched-link">
-        <div class="card-body-country">
-
-        </div>
-    </a>
+        <a href="#" class="link-to-country stretched-link">
+            <div class="card-body-country"></div>
+        </a>
     </div>
 </template>
 {% endblock %}
