--- a/templates/city/view.html.twig
+++ b/templates/city/view.html.twig
@@ -285,9 +285,7 @@
 												<h4 class="h4-review">
 													<em>Avis publié il y a
 														{{ leftDays }}
-														jour
-														{% if leftDays > 1 %}s
-														{% endif %}
+														jour{% if leftDays > 1 %}s{% endif %}
 													</em>
 												</h4>
 												<h4 class="h4-review">
