--- a/public/css/base.css
+++ b/public/css/base.css
@@ -1,7 +1,7 @@
 html, body{
   width: 100%;
   height: 100%;
-  background-color: rgba(255, 211, 132, .1);
+  /* background-color: rgba(255, 211, 132, .1); */
   
 }
 
