--- a/public/css/city.css
+++ b/public/css/city.css
@@ -1,9 +1,6 @@
 /*  STYLE CITY_SHOW */
 
-footer {
-    position : absolute;
-    bottom : 0;
-  }
+
   
   .container-fluid {
     background-color: hsl(214, 15%, 91%, 0.8);
@@ -236,12 +233,11 @@ footer {
   
   
   /* CSS FOR LEAFLET */
-  #mapid {
-    height: 200px;
-    width: 100%;
-    margin: auto;
-    z-index: 0;
-  }
+ 
+
+
+  
+   
   
   #leaflet-maps {
     margin: auto;
@@ -608,6 +604,14 @@ footer {
   
   /* 100% Image Width on Smaller Screens */
   @media only screen and (max-width: 767px) {
+
+    #mapid {
+      height: 200px;
+      width: 100%;
+      margin: auto;
+      z-index: 0;
+    }
+
     .modal-content {
       width: 100%;
     }
@@ -632,6 +636,10 @@ footer {
       width: auto; 
       height: 3.5rem;
       left: 3.5rem;
+    }
+
+    .meteo{
+      margin-bottom: 2rem;
     }
   }
   
@@ -736,6 +744,13 @@ footer {
       left: 157px;
       top: 151px;
     }
+
+    #mapid {
+      height: 200px;
+      width: 100%;
+      margin: auto;
+      z-index: 0;
+    }
   
   
   }
@@ -810,9 +825,8 @@ footer {
     }
   
     #mapid {
-      width: 400px;
-      height: 280px;
-      left: 88%;
+      width: 100%;
+      height: 285px;
       box-sizing: unset;
     }
   
@@ -823,8 +837,9 @@ footer {
   
     #leaflet-maps {
       position: absolute;
-      top: 40%;
-      left: 0px;
+      width: 30%;
+      top: 25rem;
+      left: 18rem;
     }
   
     *,
@@ -947,7 +962,7 @@ footer {
     .header-user-informations p {
       left: 61%;
     }
-  
+
     /*.em-heart {
       position: absolute;
       right: 60px;
