--- a/templates/city/view.html.twig
+++ b/templates/city/view.html.twig
@@ -95,9 +95,9 @@
 								</div>
 							{% endif %}
 						{% endfor %}
-					{% endif %}
+						{% endif %}
 
-				</div>
+					</div>
 
 				<div class="city-basic-datas">
 					{% set categoryScores = {'Transport': 4, 'Loisirs et Culture': 14, 'Sécurité': 7, 'Coût de la vie': 1, 'Environnement': 10, 'Tolérance': 15, 'Accès internet': 13} %}
@@ -126,8 +126,8 @@
 				<!-- End Leaflet Maps-->
 
 				{% if cityScore is not null %}
-					<div class="city-description text-justify" data-summary="{{ cityScore.summary|raw }}">
-						{{ cityScore.summary|raw }}
+					<div class="city-description text-justify" data-summary="{{ cityScore.summary }}">
+						{{ cityScore.summary }}
 					</div>
 				{% else %}
 					<div class="city-description text-justify">
