--- a/templates/city/view.html.twig
+++ b/templates/city/view.html.twig
@@ -244,7 +244,7 @@
 														...
 													</a>
 												</p>
-												<div class="collapse text-center text-danger report-message mx-0" id="signal-{{ review.id }}">
+												<div class="collapse show text-center text-danger report-message mx-0" data-parent="#signal-{{ review.id }}">
 													<span class="span-review">
 														<a href="{{ path('review_report', {'id': review.id } ) }}" class="report-review-button" data-reviewid="{{ review.id }}">
 															<i class="em em-no_entry" aria-role="presentation" aria-label="NO ENTRY"></i>Avis inapproprié, je signale!</a>
