--- a/public/css/advanced-search.css
+++ b/public/css/advanced-search.css
@@ -1,8 +1,12 @@
+html{
+    height: fit-content;
+}
+
 body {
     color: #3243c4;
     background-image: url("../pictures/advanced-search-background/santorini.jpg");
     background-repeat: no-repeat;
-    /* background-size: cover; */
+    background-size: cover;
     background-position: center;
     height: fit-content;
 }
@@ -12,7 +16,7 @@ body {
     background-color: white;
     padding: 3rem;
     border: 2px solid #4885db;
-    border-radius: 5%;
+    border-radius: 2%;
     justify-content: center;
     align-items: center;
     margin: auto;
@@ -55,18 +59,79 @@ body {
     display: none;
 }
 
-.flex-row-title{
-    display: flex; 
-    flex-direction: row;
-    justify-content: space-around;
-    font-size: 1.2rem;
-    text-align: center;
+.card-country {
+    height : 3rem;
+    position : relative;
 }
 
-.flex-row{
+.link-to-country {
+    position : absolute;
+    top : -1.5rem;
+}
+
+.form-checkboxes{
     display: flex; 
     flex-direction: row;
     justify-content: space-around;
 }
+
+a{
+    color: rgb(37, 192, 185);
+    margin: 1rem 0 1.5rem 0;
+}
+
+a:hover{
+    color: rgb(255, 174, 0);
+    text-decoration: none;
+}
+
+
+
+@media only screen and (max-width: 767px) {
+   
+    .form-checkboxes{
+        display: flex; 
+        flex-direction: column;
+    }
+
+    h1{
+        font-size: 2rem;
+    }
+
+    .buttons{
+        display: flex;
+        flex-direction: column;
+        margin-top: 2rem;
+    }
+
+    .btn.form-reset{
+        margin-right: 0rem;
+    }
+
+    .btn.form-submit{
+        margin-left: 0rem;
+    }
+
+}
+
+@media (max-width: 1000px) {
+
+    .form-advanced-search{
+        margin-bottom: 4rem;
+        width: 75%;
+        border-radius:1%;
+    }
+
+    /* .btn.form-reset{
+        margin-right: 0.5rem;
+    }
+
+    .btn.form-submit{
+        margin-left: 0.5rem;
+    } */
+
+}
+@media (min-width: 1400px) {}
+@media (min-width: 1600px) {}
 
 
