--- a/public/css/base.css
+++ b/public/css/base.css
@@ -1,6 +1,6 @@
 html, body{
   width: 100%;
-  height: 100%;
+  /* height: fit-content; */
   /* background-color: rgba(255, 211, 132, .1); */
   
 }
@@ -66,4 +66,29 @@ footer li {
   list-style-type: none;
 }
 
+@media only screen and (max-width: 1000px) {
+  footer{
+    display:none;
+  }
+}
 
+@media (min-width: 1000px) {
+
+  .burger{
+    display:none;
+  }
+}
+@media (min-width: 1400px) {
+
+  .burger{
+    display:none;
+  }
+
+}
+@media (min-width: 1600px) {
+
+  .burger{
+    display:none;
+  }
+
+}
