--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -91,10 +91,19 @@
 										<li class="nav-item">
 											<a class="nav-link" href="{{ path('app_register') }}">Inscription</a>
 										</li>
-									</ul>
-								{% endif %}
 
+									{% endif %}
 
+									<li>
+										<a href="#" class="contact nav-link burger">Contact</a>
+									</li>
+									<li>
+										<a href="#" class="about nav-link burger">A propos</a>
+									</li>
+									<li>
+										<a href="#" class="legal-mentions nav-link burger">Mentions Légales</a>
+									</li>
+								</ul>
 							</div>
 						</nav>
 					</header>
@@ -124,128 +133,128 @@
 			{% endblock %}
 
 			{# <div class="container-fluid">
-			                <header id="small-devices">
-			
-			
-			
-			                    <span class="navbar-toggler-icon d-block ml-auto" onclick="openNav()">
-			                        &#9776;
-			                    </span>
-			
-			                    <div id="myNav" class="overlay">
-			                        <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-			                        <div class="overlay-content" data-userLogged="{% if app.user %}true{% else %}false{% endif %}">
-			                            <hr class="hr-collapse-menu">
-			                            <a href="{{ path('advanced_search')}}">Accueil</a>
-			                            <a href="{{ path('advanced_search')}}">Recherche avancée</a>
-			                            <a href="{{ path('search')}}">Recherche simple</a>
-			                            <hr class="hr-collapse-menu">
-			                            <a href="">Random</a>
-			                           
-			                            <hr class="hr-collapse-menu">
-			
-			
-			                            {% if app.user %}
-			                                <a href="#" id="profileButton">Profil <i class="fa fa-chevron-right" aria-hidden="true"></i><i class="fa fa-chevron-down disabled-menu" aria-hidden="true"></i></a>
-			                                <a href="{{ path('user_show', { 'id' : app.user.id }) }}" class="disabled-menu">Mon profil</a>
-			                                <a href="{{ path('user_edit' , { id: app.user.id }) }}" class="disabled-menu">Paramètres</a>
-			
-			                                {% set role = "ROLE_ADMIN" %}
-			                                {% if role in app.user.getRoles() %}
-			                                    <a href="{{ url( 'easyadmin' )}}" class="disabled-menu">Administration</a>
-			                                {% endif %}
-			
-			                            <hr class="hr-collapse-menu">
-			                            {% endif %}
-			                             {% if app.user %}
-			                                <a href="{{ path('app_logout') }}" class="text-alert-success">Déconnexion</a>   
-			                             {% else %}
-			                                <a href="{{ path('app_login') }}" class="text-alert-success">Connexion</a>
-			                            {% endif %}
-			                        </div>
-			                    </div>
-			                </header>
-			
-			                <header id="desktop">
-			                    <ul class="nav-desktop">
-			                        <div class="nav-desktop-left">
-			                            <li class="nav-item">
-			                                <a href="{{ path('advanced_search')}}">Accueil</a>
-			                            </li>
-			                            <li class="nav-item">
-			                                <a href="{{ path('advanced_search')}}">Recherche avancée</a>
-			                            </li>
-			                            <li class="nav-item">
-			                              <a href="{{ path('search')}}">Recherche simple</a>
-			                            </li>
-			                            <li class="nav-item">
-			                                <a href="">Random</a>
-			                            </li>
-			                        </div>
-			
-			                        <a href="{{ path('advanced_search') }}"><img src="{{ asset('pictures/logo/logo.png') }}" class="website-logo" /></a>
-			
-			                        <div class="nav-desktop-right">
-			                        {% if app.user %}
-			                            <li class="nav-item">
-			                                <a href="{{ path('user_show', { 'id' : app.user.id }) }}">Mon profil</a>
-			                            </li>
-			                            <li class="nav-item">    
-			                                <a href="{{ path('user_edit' , { id: app.user.id }) }}">Paramètres</a>
-			                            </li>
-			
-			                            {% set role = "ROLE_ADMIN" %}
-			                            
-			                            {% if role in app.user.getRoles() %}
-			                                <li class="nav-item">
-			                                    <a href="{{ url( 'easyadmin' )}}">Administration</a>
-			                                </li>
-			                            {% endif %}
-			
-			                             {% endif %}
-			                             {% if app.user %}
-			                            <li class="nav-item"> 
-			                                <a href="{{ path('app_logout') }}" class="text-danger">Déconnexion</a>  
-			                            </li> 
-			                             {% else %}
-			                             <li class="nav-item">
-			                                <a href="{{ path('app_login') }}" class="text-success">Connexion</a>
-			                            </li>
-			                        {% endif %}
-			                         </div>
-			                        </ul>
-			                    
-			                </header>
-			                
-			
-			                <main>
-			            {% endblock %}
-			            {% block container %}{% endblock %}
-			            {% block footer %}
-			                </main>
-			            </div>
-			            <footer class="mt-auto">
-			            <ul class="nav m-0">
-			                <li class="nav-item">
-			                <a class="nav-link active" href="">À propos</a> 
-			                </li>
-			                <li class="nav-item">
-			                <a class="nav-link" href="">‎Mentions Légales</a>
-			                </li>
-			                <li class="nav-item">
-			                <a class="nav-link" href="">Contact</a>
-			                </li>
-			            </ul>
-			            </footer>
-			            {% endblock %}
-			        {% endblock %}
-			        {% block javascripts %}
-			
-			           <!-- Internal Javascript -->
-			        <script src="{{ asset('js/base.js') }}"> </script>
-			
-			        {% endblock %}
-			   #}
+												                <header id="small-devices">
+												
+												
+												
+												                    <span class="navbar-toggler-icon d-block ml-auto" onclick="openNav()">
+												                        &#9776;
+												                    </span>
+												
+												                    <div id="myNav" class="overlay">
+												                        <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+												                        <div class="overlay-content" data-userLogged="{% if app.user %}true{% else %}false{% endif %}">
+												                            <hr class="hr-collapse-menu">
+												                            <a href="{{ path('advanced_search')}}">Accueil</a>
+												                            <a href="{{ path('advanced_search')}}">Recherche avancée</a>
+												                            <a href="{{ path('search')}}">Recherche simple</a>
+												                            <hr class="hr-collapse-menu">
+												                            <a href="">Random</a>
+												                           
+												                            <hr class="hr-collapse-menu">
+												
+												
+												                            {% if app.user %}
+												                                <a href="#" id="profileButton">Profil <i class="fa fa-chevron-right" aria-hidden="true"></i><i class="fa fa-chevron-down disabled-menu" aria-hidden="true"></i></a>
+												                                <a href="{{ path('user_show', { 'id' : app.user.id }) }}" class="disabled-menu">Mon profil</a>
+												                                <a href="{{ path('user_edit' , { id: app.user.id }) }}" class="disabled-menu">Paramètres</a>
+												
+												                                {% set role = "ROLE_ADMIN" %}
+												                                {% if role in app.user.getRoles() %}
+												                                    <a href="{{ url( 'easyadmin' )}}" class="disabled-menu">Administration</a>
+												                                {% endif %}
+												
+												                            <hr class="hr-collapse-menu">
+												                            {% endif %}
+												                             {% if app.user %}
+												                                <a href="{{ path('app_logout') }}" class="text-alert-success">Déconnexion</a>   
+												                             {% else %}
+												                                <a href="{{ path('app_login') }}" class="text-alert-success">Connexion</a>
+												                            {% endif %}
+												                        </div>
+												                    </div>
+												                </header>
+												
+												                <header id="desktop">
+												                    <ul class="nav-desktop">
+												                        <div class="nav-desktop-left">
+												                            <li class="nav-item">
+												                                <a href="{{ path('advanced_search')}}">Accueil</a>
+												                            </li>
+												                            <li class="nav-item">
+												                                <a href="{{ path('advanced_search')}}">Recherche avancée</a>
+												                            </li>
+												                            <li class="nav-item">
+												                              <a href="{{ path('search')}}">Recherche simple</a>
+												                            </li>
+												                            <li class="nav-item">
+												                                <a href="">Random</a>
+												                            </li>
+												                        </div>
+												
+												                        <a href="{{ path('advanced_search') }}"><img src="{{ asset('pictures/logo/logo.png') }}" class="website-logo" /></a>
+												
+												                        <div class="nav-desktop-right">
+												                        {% if app.user %}
+												                            <li class="nav-item">
+												                                <a href="{{ path('user_show', { 'id' : app.user.id }) }}">Mon profil</a>
+												                            </li>
+												                            <li class="nav-item">    
+												                                <a href="{{ path('user_edit' , { id: app.user.id }) }}">Paramètres</a>
+												                            </li>
+												
+												                            {% set role = "ROLE_ADMIN" %}
+												                            
+												                            {% if role in app.user.getRoles() %}
+												                                <li class="nav-item">
+												                                    <a href="{{ url( 'easyadmin' )}}">Administration</a>
+												                                </li>
+												                            {% endif %}
+												
+												                             {% endif %}
+												                             {% if app.user %}
+												                            <li class="nav-item"> 
+												                                <a href="{{ path('app_logout') }}" class="text-danger">Déconnexion</a>  
+												                            </li> 
+												                             {% else %}
+												                             <li class="nav-item">
+												                                <a href="{{ path('app_login') }}" class="text-success">Connexion</a>
+												                            </li>
+												                        {% endif %}
+												                         </div>
+												                        </ul>
+												                    
+												                </header>
+												                
+												
+												                <main>
+												            {% endblock %}
+												            {% block container %}{% endblock %}
+												            {% block footer %}
+												                </main>
+												            </div>
+												            <footer class="mt-auto">
+												            <ul class="nav m-0">
+												                <li class="nav-item">
+												                <a class="nav-link active" href="">À propos</a> 
+												                </li>
+												                <li class="nav-item">
+												                <a class="nav-link" href="">‎Mentions Légales</a>
+												                </li>
+												                <li class="nav-item">
+												                <a class="nav-link" href="">Contact</a>
+												                </li>
+												            </ul>
+												            </footer>
+												            {% endblock %}
+												        {% endblock %}
+												        {% block javascripts %}
+												
+												           <!-- Internal Javascript -->
+												        <script src="{{ asset('js/base.js') }}"> </script>
+												
+												        {% endblock %}
+												   #}
 
 			{% block javascripts %}
 				<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
